# molerat

./: .gitignore  LICENSE.md  README.md  Tree-Shaker.md  molerat.json  pyproject.toml  setup.cfg
src/molerat/: cli.py  config.py  main.py  tree-shaker-lab.py
src/molerat/data/: native_modules.py
src/molerat/tree_shaker/: graph_builder.py
tests/: test_molerat.py
