[project]
name = "molerat"
version = "0.0.3"
description = "molerat is a Python utility for synchronizing code between directories and promoting dependencies to sub-projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.5",
    "rich>=14.0.0",
    "toml>=0.10.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 
