[metadata]
name = molerat
version = 0.0.1
description = molerat is a Python utility for synchronizing code between directories and promoting dependencies to sub-projects.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = swapnilbhattacharjee187@gmail.com
url = https://github.com/SwapnilB31/molerat
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.    

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pydantic>=2.11.5
    rich>=14.0.0
    toml>=0.10.2
    watchdog>=6.0.0

[options.extras_require]
dev =
    molerat
    pytest>=8.4.0
    ruff>=0.11.13

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#     molerat = molerat.__init__:main

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"